# cpolytui

./: .gitignore  CMakeLists.txt  main.c
autogen/: element.c.template  element.h.template  new_element.py  preprocess.py
include/: element.h  elementFunctions.h  memoryManagement.h  vtable.h
include/elements/: window.h
src/: element.c  elementFactory.c  memoryManagement.c  vtable.c
src/elements/: window.c
